<resources>
    <string name="app_name">P.C</string>
    <string name="facebook_app_id">1350783595066898</string>
    <string name="please_wait">잠시만 기다려주세요.</string>
    <string name="search">검색</string>
    <string name="input_search_text">검색어를 입력해주세요.</string>
    <string name="complete">완료</string>
    <string name="logout">로그아웃</string>
    <string name="continue_">계속</string>
    <string name="email">이메일</string>
    <string name="interest_field">관심분야</string>
    <string name="select">선택하기</string>
    <string name="delete">삭제</string>
    <string name="edit">편집하기</string>
    <string name="error">오류</string>
    <string name="ok">확인</string>
    <string name="finish">종료</string>
    <string name="cancel">취소</string>
    <string name="info">정보</string>
    <string name="article">기사</string>
    <string name="column">칼럼</string>
    <string name="photo">사진</string>
    <string name="close">닫기</string>
    <string name="edit_short">편집</string>
    <string name="reference">참고</string>
    <string name="add">추가하기</string>
    <string name="add_short">추가</string>
    <string name="title">제목</string>
    <string name="content">내용</string>
    <string name="input">입력</string>
    <string name="select_short">선택</string>
    <string name="modify">수정하기</string>
    <string name="modify_short">수정</string>
    <string name="success_short">성공</string>
    <string name="fail_short">실패</string>
    <string name="search_long">검색하기</string>
    <string name="reset">초기화</string>
    <string name="preview">미리보기</string>
    <string name="interest_short">관심</string>
    <string name="temp_file_short">임시PDF파일</string>
    <string name="create">생성하기</string>
    <string name="create_short">생성</string>
    <string name="oss">오픈소스</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share_article">기사 공유</string>
    <string name="share_column">칼럼 공유</string>
    <string name="share_photo">사진 공유</string>
    <string name="day_magazine">일자별 잡지</string>
    <string name="my_magazine">나만의 잡지</string>
    <string name="show_profile">프로필 보기</string>
    <string name="logout_and_delete">로그아웃 및 데이터 삭제</string>
    <string name="information">정보</string>
    <string name="report">오류제보</string>
    <string name="help">도움말</string>
    <string name="opensource">오픈소스</string>
    <string name="are_you_finish_app">앱을 종료하시겠습니까?</string>
    <string name="please_input_content">내용을 입력해주세요.</string>
    <string name="no_install_email_client">설치된 이메일 클라이언트가 존재하지 않습니다.</string>
    <string name="removing_data">데이터 삭제 중입니다.</string>
    <string name="please_input_search_text">검색어를 입력해주세요.</string>
    <string name="search_result">검색 결과</string>
    <string name="there_is_no_file">파일이 존재하지 않습니다.</string>
    <string name="file_short">파일</string>
    <string name="file_list">파일 목록</string>
    <string name="delete_all">전체삭제</string>
    <string name="select_interest_field">관심분야 선택</string>
    <string name="select_more_3">3개 이상 선택해주세요.</string>
    <string name="please_input_email">이메일을 입력해주세요.</string>
    <string name="self_introduce">자기소개</string>
    <string name="please_input_introduce">자기소개를 입력해주세요.</string>
    <string name="no_article">등록된 기사가 없습니다.</string>
    <string name="change_interest_field">관심분야가 수정되었습니다.</string>
    <string name="day_title">%1$d일차(%2$s년 %3$s월 %4$s일)</string>
    <string name="day_title2">%1$d일차\n(%2$s년 %3$s월 %4$s일)</string>
    <string name="day_title_short">%1$d일차</string>
    <string name="date_str">%1$s년 %2$s월 %3$s일</string>
    <string name="before_the_competition">대회 시작 전</string>
    <string name="please_enter_url">url을 입력해주세요.</string>
    <string name="no_column">등록된 칼럼이 없습니다.</string>
    <string name="no_photo">등록된 사진이 없습니다.</string>
    <string name="no_day_magazine">등록된 잡지가 없습니다.</string>
    <string name="no_my_magazine">생성한 나만의 잡지가 없습니다.</string>
    <string name="no_articles">등록된 게시글이 없습니다.\n게시글을 작성 후 시도해주세요.</string>
    <string name="select_pdf_page">%1$d번째 페이지로 삽입됨</string>
    <string name="write_article">기사 작성</string>
    <string name="please_select_layout">사용할 레이아웃을 선택해주세요.</string>
    <string name="please_enter_title">제목을 입력해주세요.</string>
    <string name="please_enter_content">내용을 입력해주세요.</string>
    <string name="convention_day">대회일</string>
    <string name="successfully_posted_article">성공적으로 기사를 등록하였습니다.</string>
    <string name="failed_register_article">기사를 등록하는데 실패하였습니다.</string>
    <string name="select_layout">레이아웃 선택</string>
    <string name="write_column">칼럼 작성</string>
    <string name="successfully_posted_column">성공적으로 칼럼을 등록하였습니다.</string>
    <string name="failed_register_column">칼럼을 등록하는데 실패하였습니다.</string>
    <string name="upload_photo">사진 등록</string>
    <string name="generate_pdf">PDF 생성</string>
    <string name="show_pdf">PDF 보기</string>
    <string name="fail_generate_pdf">PDF를 생성하는데 실패하였습니다.</string>
    <string name="loading_font_file">폰트 파일을 불러오는 중...</string>
    <string name="generating_pdf_page">페이지 생성 중...(%1$d/%2$d)</string>
    <string name="are_you_delete">정말로 삭제하시겠습니까?</string>
    <string name="mit_license">Copyright (c) [year] [name of copyright owner]\n
\n
Permission is hereby granted, free of charge, to any person
obtaining a copy of this software and associated documentation
files (the "Software"), to deal in the Software without
restriction, including without limitation the rights to use,
copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the
Software is furnished to do so, subject to the following\n
conditions:\n
\n
The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.
\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
OTHER DEALINGS IN THE SOFTWARE.
</string>
</resources>