<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="ga.pageconnected.pageconnected.activity.add.AddMyMagazineActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/createBtn"
        >


        <ga.pageconnected.pageconnected.util.PagerContainer
            android:id="@+id/view_pager_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ga.pageconnected.pageconnected.util.CustomViewPager
                android:id="@+id/view_pager"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                >

            </ga.pageconnected.pageconnected.util.CustomViewPager>

        </ga.pageconnected.pageconnected.util.PagerContainer>


        <!--<com.matthewtamlin.sliding_intro_screen_library.indicators.DotIndicator-->
        <!--android:id="@+id/size_indicator_ad"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--/>-->

    </RelativeLayout>

    <Button
        android:id="@+id/createBtn"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:background="@color/dark_gray"
        android:text="@string/create_short"
        android:textColor="@color/white"
        android:textSize="12sp"
        />


    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_articles"
        android:textColor="@color/dark_gray"
        android:gravity="center"
        />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorName="LineSpinFadeLoaderIndicator"
        app:indicatorColor="@color/colorPrimary"
        style="@style/AVLoadingIndicatorView.Small"
        android:layout_centerInParent="true"
        />


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:contentInsetStart="0dp"
        android:layout_height="@dimen/custom_actionbar_size"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_magazine"
                android:textColor="@color/white"
                android:textSize="@dimen/custom_actionbar_title_size"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>



    </android.support.v7.widget.Toolbar>

</RelativeLayout>
