<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ga.pageconnected.pageconnected.profile.InfoFragment"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:clipToPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            >




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:minHeight="40dp"
                >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="14sp"
                    android:textColor="@color/profile_title"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/profile_content"
                        android:autoLink="email"
                        />

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/loading_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:indicatorName="BallPulseIndicator"
                        app:indicatorColor="@color/colorPrimary"
                        style="@style/AVLoadingIndicatorView.Small"
                        android:layout_gravity="left|center_vertical"
                        />

                </FrameLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:minHeight="40dp"
                >

                <TextView
                    android:id="@+id/tv_interest"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/interest_field"
                    android:textSize="14sp"
                    android:textColor="@color/profile_title"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    />


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <LinearLayout
                        android:id="@+id/interest_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                    </LinearLayout>

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/loading_interest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:indicatorName="BallPulseIndicator"
                        app:indicatorColor="@color/colorPrimary"
                        style="@style/AVLoadingIndicatorView.Small"
                        android:layout_gravity="left|center_vertical"
                        />

                </FrameLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:minHeight="40dp"
                >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/self_introduce"
                    android:textSize="14sp"
                    android:textColor="@color/profile_title"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/tv_intro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/profile_content"
                        />

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/loading_intro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:indicatorName="BallPulseIndicator"
                        app:indicatorColor="@color/colorPrimary"
                        style="@style/AVLoadingIndicatorView.Small"
                        android:layout_gravity="left|center_vertical"
                        />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        fab:fab_size="mini"
        fab:fab_icon="@drawable/ic_pencil_grey600_24dp"
        fab:fab_colorNormal="@color/white"
        fab:fab_title="Action A"
        fab:fab_colorPressed="@color/light_gray" />


</RelativeLayout>
